# sot_solver

./: .gitignore  CMakeLists.txt
include/sot_solver/: sot_solver.hh  timer_utility.hh
src/: CMakeLists.txt  sot_solver.cpp  timer_utility.cpp
tests/: test.py
